@@ -80,7 +80,7 @@ binary-indep: install
 	dh_installman -i
 	dh_installdocs -i
 	dh_installdebconf -i
-	dh_installchangelogs -i $(BUILD_TREE)/ChangeLog
+	dh_installchangelogs -i
 	dh_compress -i -X.html
 	dh_lintian -i
 	dh_link -i
@@ -110,7 +110,7 @@ binary-arch: install
 
 	dh_installcron -a
 
-	dh_installchangelogs -a $(BUILD_TREE)/ChangeLog
+	dh_installchangelogs -a
 	dh_lintian -a
 
 	dh_strip -a
@@ -120,7 +120,7 @@ binary-arch: install
 	chmod 02755 $(d)/libpam-modules/sbin/unix_chkpwd
 	dh_makeshlibs -plibpam0g -V "libpam0g (>= 1.1.0)"
 	dh_installdeb -a
-	dh_shlibdeps -a -L libpam0g -l$(CURDIR)/debian/libpam0g/lib
+	dh_shlibdeps -a
 	dh_gencontrol -a
 	dh_md5sums -a
 	dh_builddeb -a
